Feat: refine api server config
