# internal/apiserver/types/response/user.go
@@ -11,3 +11,8 @@ type UserResponse struct {
 	Bio      string `json:"bio"`
 	Status   string `json:"status"`
 }
+
+type LoginResponse struct {
+	Token string        `json:"token"`
+	User  *UserResponse `json:"user"`
+}
